--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,9 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: PO-Pensjon Ekstern API
+title: Pensjon Ekstern-API
 description: >- # this means to ignore newlines until "baseurl:"
-  Beskrivelse av eksterne API eksponert av PO-pensjon
+  Beskrivelse av eksterne API eksponert av Seksjon for pensjon og uføretrygd
 baseurl: "/pensjon-ekstern-api" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
