PES-590: Add ytelseType parameter to harAFPoffentlig.

--- a/docs/api/afpprivat/harAFPoffentlig.yaml
+++ b/docs/api/afpprivat/harAFPoffentlig.yaml
@@ -27,6 +27,15 @@ paths:
           required: true
           schema:
             type: string
+        - name: ytelseType
+          in: query
+          required: false
+          schema:
+            type: string
+            enum:
+              - AFP
+              - LIVSVARIG_AFP
+            default: AFP
         - name: correlationId
           in: header
           description: Format - UUID, correlationId
