Oppdatert vedtaksinformasjon med foretrukket scope

--- a/docs/api/alderspensjon/vedtaksinformasjon/apidocHentVedtaksinformasjon.yaml
+++ b/docs/api/alderspensjon/vedtaksinformasjon/apidocHentVedtaksinformasjon.yaml
@@ -3,7 +3,8 @@ info:
   title: Pensjon Vedtaksinformasjon
   version: '1.0'
   description: |-
-    For å kunne bruke tjenesten må scope i autentiseringen mot Maskinporten settes til `nav:pensjon/v1/vedtaksinformasjon`. 
+    For å kunne bruke tjenesten må scope i autentiseringen mot Maskinporten settes til `nav:pensjon/vedtaksinformasjon.read`. 
+    Tjenesten støtter også scopet `nav:pensjon/v1/vedtaksinformasjon`, men dette skal fases ut.
 
     Tjenesten returnerer den samordningspliktige informasjonen om en brukers vedtak.
 servers:
