PES-686: Oppdatere swagger med ytelsene TIDLIGPENSJON, TIDLIGPEN_OVERGANG og SAERALDERSPAASLAG i TP.

--- a/docs/api/samordning/hendelser-api.yaml
+++ b/docs/api/samordning/hendelser-api.yaml
@@ -323,6 +323,9 @@ components:
             - AFP
             - OPPSATT_BTO_PEN
             - SAERALDER
+            - TIDLIGPENSJON
+            - TIDLIGPEN_OVERGANG
+            - SAERALDERSPAASLAG
             - PAASLAGSPENSJON
             - OVERGANGSTILLEGG
             - BETINGET_TP
