--- a/docs/api/uforetrygd-lanekassen/uforetrygd-lanekassen-api.yaml
+++ b/docs/api/uforetrygd-lanekassen/uforetrygd-lanekassen-api.yaml
@@ -1,7 +1,8 @@
 openapi: 3.0.1
 info:
   title: Uføretrygd Lånekassen API
-  description: #TODO
+  description: |
+    API for å hente informasjon om en brukers uføretrygd som Lånekassen benytter for å vurdere sletting av gjeld.
   version: 1.0.0
 servers:
   - url: https://pensjon-q2-gw.ekstern.dev.nav.no/uforetrygd/lanekassen
@@ -36,11 +37,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/SakResponse'
         400:
-          description: Feil i request-data fra klient
+          description: Feil i request-data fra klient.
         401:
-          description: Autentisering feilet
+          description: Autentisering feilet.
         403:
-          description: Autorisering til ressurs feilet, feks feil scope i token
+          description: Autorisering til ressurs feilet, feks feil scope i token.
+        404:
+          description: Fant ingen sak for gitt personId og dato.
 components:
   schemas:
     SakRequest:
@@ -49,12 +52,12 @@ components:
       properties:
         personId:
           type: string
-          description: Fødselsnummer, 11 siffer
+          description: Fødselsnummer, 11 siffer.
           example: "01234567890"
         dato:
           type: string
-          format: date
-          description: Datoformat YYYY-MM-DD
+          format: YYYY-mm-DD
+          description: Datoformat YYYY-mm-DD.
           example: "2025-01-01"
     SakResponse:
       title: Sak - response
@@ -63,15 +66,28 @@ components:
         harUforetrygdUtbetalt:
           type: boolean
           example: true
-          description: #TODO
+          description: Har bruker uføretrygd utbetalt på gitt dato.
         uforegrad:
           type: number
-          description: Uføregrad i prosent på gitt dato
+          description: Uføregrad i prosent på gitt dato.
           example: 100
         harBarnetillegg:
           type: boolean
           example: false
-          description: Har barnetillegg på gitt dato
+          description: Har barnetillegg på gitt dato.
+        statusBeregning:
+          $ref: '#/components/schemas/StatusBeregning'
+    StatusBeregning:
+      type: string
+      description: |
+        ENDELIG - Der er foretatt en endelig beregning på saken.
+        FORELOPIG - Det er foretatt en foreløpig beregning på saken, og at det kan komme endringer i fremtiden.
+        USIKKER - Datagrunnlaget er manglende for å kunne si om det er en endelig eller foreløpig beregning på saken.
+      enum:
+        - FORELOPIG
+        - ENDELIG
+        - USIKKER
+      example: ENDELIG
   securitySchemes:
     bearerAuth:
       type: http
